home animations dialed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap" rel="stylesheet">
     <title>Kevin Jordan</title>
     </head>
-    <body style="background-color: black;">
+    <body>
       <div id="app"></div>
       <script type="module" src="/src/main.ts"></script>
   </body>
