fixed overflow issue

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap" rel="stylesheet">
     <title>Kevin Jordan</title>
     </head>
-    <body style="background-color:black;">
+    <body style="background-color: black;">
       <div id="app"></div>
       <script type="module" src="/src/main.ts"></script>
   </body>
