--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
-<!doctype html>
-<html lang="en" style="scroll-behavior: smooth; background-color: #082f49;">
+<!DOCTYPE html>
+<html
+  lang="en"
+  style="scroll-behavior: smooth; background-color: #0a0a0a"
+>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="./image/favicon.png">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./image/favicon.png"
+    />
     <title>Kevin Jordan</title>
-    </head>
-    <body style="overflow-x: hidden;">
-      <div id="app"></div>
-      <script type="module" src="/src/main.ts"></script>
+  </head>
+  <body style="overflow-x: hidden">
+    <div id="app"></div>
+    <script
+      type="module"
+      src="/src/main.ts"
+    ></script>
   </body>
 </html>
